--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,14 @@ environment:
 
 dependencies:
   dio: ^4.0.0
+  freezed_annotation:
+  json_annotation: ^4.0.0   # 4.1.0 conflict with flutter sdk
+    
+  velocity_x: ^3.3.0
+  styled_widget: ^0.3.1+2
+  percent_indicator: ^3.3.0-nullsafety.1
+
+  flutter_html: ^2.1.1
 
   flutter:
     sdk: flutter
@@ -32,8 +40,15 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  freezed:
+  json_serializable: ^4.1.4 # 5.0.0
+  build_runner: ^2.0.0
+
   flutter_test:
     sdk: flutter
+
+# dependency_overrides:
+#   meta: ^1.3.0  # flutter_test
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,6 +77,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  #
+  fonts:
+    - family: Dosis
+      fonts:
+        - asset: assets/fonts/Dosis-Medium.ttf
+        - asset: assets/fonts/Dosis-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Dosis-ExtraBold.ttf
+          weight: 900
   # fonts:
   #   - family: Schyler
   #     fonts:
