Only run CI/CD on dev branch

--- a/.github/workflows/flutter-netlify.yml
+++ b/.github/workflows/flutter-netlify.yml
@@ -2,9 +2,9 @@ name: Flutter Netlify CI/CD
 
 on:
   push:
-    branches: [main, dev]
+    branches: [dev]
   pull_request:
-    branches: [main, dev]
+    branches: [dev]
   workflow_dispatch:
 
 jobs:
