--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,14 +22,17 @@ environment:
 
 dependencies:
   dio: ^4.0.0
+  http: ^0.13.3
   freezed_annotation:
   json_annotation: ^4.0.0   # 4.1.0 conflict with flutter sdk
     
+  get: ^4.3.8
   velocity_x: ^3.3.0
   styled_widget: ^0.3.1+2
   percent_indicator: ^3.3.0-nullsafety.1
+  fl_chart: ^0.36.3
 
-  flutter_html: ^2.1.1
+  # flutter_html: ^2.1.1
 
   flutter:
     sdk: flutter
