--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "flutter_netlify",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
-  "devDependencies": {},
   "dependencies": {
     "@notionhq/client": "^0.2.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
+    "node-fetch": "^2.6.1"
   }
 }
